--- a/src/nuget.config
+++ b/src/nuget.config
@@ -2,6 +2,6 @@
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-    <add key="Local" value="../packages" />
+    <add key="Local" value="./packages" />
   </packageSources>
 </configuration>
