--- a/labs/12/final/app-service.yml
+++ b/labs/12/final/app-service.yml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-service
+  labels:
+    app: northwindstore
+    component: app
 spec:
   selector:
     app: northwindstore
