Fixed error in docker-compose.ci.yml

--- a/ci/docker-compose.ci.yml
+++ b/ci/docker-compose.ci.yml
@@ -11,6 +11,8 @@ services:
     networks:
     - northwindstore-dev
   northwindstore.db:
+    ports:
+    - "1433"
     networks:
     - northwindstore-dev
 
