--- a/ci/docker-compose.ci.yml
+++ b/ci/docker-compose.ci.yml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   northwindstore.app:
+    container_name: northwindstore.app
     environment:
     - ASPNETCORE_ENVIRONMENT=Development
     - ASPNETCORE_URLS=http://+:80
@@ -11,6 +12,7 @@ services:
     networks:
     - northwindstore-dev
   northwindstore.db:
+    container_name: northwindstore.db
     ports:
     - "1433"
     networks:
