--- a/src/NorthwindStore.BL/NorthwindStore.BL.csproj
+++ b/src/NorthwindStore.BL/NorthwindStore.BL.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageReference Include="DotVVM.Core" Version="4.0.7" />
     <PackageReference Include="DotVVM.DynamicData.Annotations" Version="4.0.7" />
+    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.20.0" />
     <PackageReference Include="Riganti.Utils.Infrastructure.AutoMapper" Version="2.5.1" />
     <PackageReference Include="Riganti.Utils.Infrastructure.DotVVM" Version="2.5.1" />
     <PackageReference Include="Riganti.Utils.Infrastructure.EntityFrameworkCore" Version="2.5.1" />
